@@ -45,7 +45,6 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletResponse;
 import javax.validation.Valid;
 import javax.validation.constraints.Min;
@@ -219,7 +218,7 @@ public class EmbeddingController {
         List<Embedding> list = subjectService.removeSubjectEmbeddings(apiKey, embeddingIds);
         List<EmbeddingDto> dtoList = list.stream()
                                          .map(c -> new EmbeddingDto(c.getId().toString(), c.getSubject().getSubjectName()))
-                                         .collect(Collectors.toList());
+                                         .toList();
         return dtoList;
     }
 
